# nbody

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md
demo/: CMakeLists.txt
demo/source/: demo_app.cpp  demo_app.h  draw_utils.cpp  draw_utils.h  main.cpp  platform.h  rhi.h
demo/source/programs/: cpu_particles_frag.glsl  cpu_particles_geom.glsl  cpu_particles_vert.glsl  cpu_structures_frag.glsl  cpu_structures_geom.glsl  cpu_structures_vert.glsl  program_base.h  program_nbody_cpu.cpp  program_nbody_cpu.h
demo/source/vk/: vk_helpers.cpp  vk_helpers.h  vk_rhi.cpp  vk_rhi.h
demo/source/win/: win_platform.cpp  win_platform.h
include/: bhtree.h  bounds.h  constants.h  ray.h  util.h  vector.h
include/nbody/: bhtree.h  body.h  bounds.h  sim.h  util.h  vector.h
shaders/: accelerate.comp  integrate.comp
source/: bhtree.cpp  gpu.cpp  gpu.h  shaders.h  sim.cpp  util.cpp  vector.cpp
tests/: CMakeLists.txt
tests/source/: test_bhtree.cpp  test_gpu.cpp  test_sim.cpp
